--- a/Studenten_Volg_Systeem/Views/Students/Edit.cshtml
+++ b/Studenten_Volg_Systeem/Views/Students/Edit.cshtml
@@ -1,4 +1,4 @@
-﻿@model Studenten_Volg_Systeem.Models.StudentListItemViewModel
+﻿@model Studenten_Volg_Systeem.Models.Student
 
 @{
     ViewData["Title"] = "Edit";
