--- a/Studenten_Volg_Systeem/Views/Students/Create.cshtml
+++ b/Studenten_Volg_Systeem/Views/Students/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model Studenten_Volg_Systeem.Models.Student
+﻿@model Studenten_Volg_Systeem.ViewModels.StudentCreateViewModel
 
 @{
     ViewData["Title"] = "Create";
@@ -13,31 +13,31 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Firstname" class="control-label"></label>
-                <input asp-for="Firstname" class="form-control" />
-                <span asp-validation-for="Firstname" class="text-danger"></span>
+                <label asp-for="Student.Firstname" class="control-label"></label>
+                <input asp-for="Student.Firstname" class="form-control" />
+                <span asp-validation-for="Student.Firstname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Middelname" class="control-label"></label>
-                <input asp-for="Middelname" class="form-control" />
-                <span asp-validation-for="Middelname" class="text-danger"></span>
+                <label asp-for="Student.Middelname" class="control-label"></label>
+                <input asp-for="Student.Middelname" class="form-control" />
+                <span asp-validation-for="Student.Middelname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Lastname" class="control-label"></label>
-                <input asp-for="Lastname" class="form-control" />
-                <span asp-validation-for="Lastname" class="text-danger"></span>
+                <label asp-for="Student.Lastname" class="control-label"></label>
+                <input asp-for="Student.Lastname" class="form-control" />
+                <span asp-validation-for="Student.Lastname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Adress" class="control-label"></label>
-                <input asp-for="Adress" class="form-control" />
-                <span asp-validation-for="Adress" class="text-danger"></span>
+                <label asp-for="Student.Adress" class="control-label"></label>
+                <input asp-for="Student.Adress" class="form-control" />
+                <span asp-validation-for="Student.Adress" class="text-danger"></span>
             </div>
-            @*<div class="form-group">
+            <div class="form-group">
                 <label asp-for="Courses" class="control-label"></label>
-                <select asp-for="CourseId" asp-items="Model.Courses.Select(m => new SelectListItem { Text = m.Name, Value = m.Name })"></select>
-                <span asp-validation-for="CourseId" class="text-danger"></span>
+                <select asp-for="CourseID" asp-items="Model.Courses.Select(m => new SelectListItem { Text = m.Name, Value = m.Id.ToString() })"></select>
+                <span asp-validation-for="CourseID" class="text-danger"></span>
 
-            </div>*@
+            </div>
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
