--- a/Studenten_Volg_Systeem/Views/Proffesors/Delete.cshtml
+++ b/Studenten_Volg_Systeem/Views/Proffesors/Delete.cshtml
@@ -4,24 +4,30 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Verwijder Docent</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je zeker dat je dit wilt verdijderen?</h3>
 <div>
-    <h4>Proffesor</h4>
+    @*<h4>Proffesor</h4>*@
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Name)*@ Naam
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Courses.Name)*@ Opleiding
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Courses.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Verwijder" class="btn btn-danger" /> |
+        <a asp-action="Index">Terug Naar Docenten</a>
     </form>
 </div>
