--- a/Studenten_Volg_Systeem/Views/Proffesors/Details.cshtml
+++ b/Studenten_Volg_Systeem/Views/Proffesors/Details.cshtml
@@ -7,18 +7,24 @@
 <h1>Details</h1>
 
 <div>
-    <h4>Proffesor</h4>
+    <h4>Docenten</h4>
     <hr />
     <dl class="row">
-        <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Name)
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Name)*@ Naam
         </dt>
-        <dd class = "col-sm-10">
+        <dd class="col-sm-10">
             @Html.DisplayFor(model => model.Name)
+        </dd>
+        <dt class="col-sm-2">
+            @*@Html.DisplayNameFor(model => model.Courses.Name)*@ Opleiding
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Courses.Name)
         </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Edit" asp-route-id="@Model.Id">Pas Aan</a> |
+    <a asp-action="Index">Terug Naar Docenten</a>
 </div>
