--- a/Studenten_Volg_Systeem/Views/Proffesors/Index.cshtml
+++ b/Studenten_Volg_Systeem/Views/Proffesors/Index.cshtml
@@ -1,19 +1,22 @@
-﻿@model IEnumerable<Studenten_Volg_Systeem.Models.Proffesor>
+﻿@model IEnumerable<Studenten_Volg_Systeem.ViewModels.StudentListItemViewModel>
 
 @{
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Docenten</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Maak Aan</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Name)
+                @*@Html.DisplayNameFor(model => model.Name)*@ Naam
+            </th>
+            <th>
+                Opleiding
             </th>
             <th></th>
         </tr>
@@ -22,12 +25,18 @@
 @foreach (var item in Model) {
         <tr>
             <td>
-                @Html.DisplayFor(modelItem => item.Name)
+                @Html.DisplayFor(modelItem => item.Fullname)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                @Html.DisplayFor(modelItem => item.Course)
+            </td>
+            <td>
+
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Pas Aan</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
             </td>
         </tr>
 }
