--- a/Studenten_Volg_Systeem/Views/Students/Create.cshtml
+++ b/Studenten_Volg_Systeem/Views/Students/Create.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Create";
 }
 
-<h1>Create</h1>
+<h1>Aanmaken Student</h1>
 
 <h4>Student</h4>
 <hr />
@@ -13,40 +13,40 @@
         <form asp-action="Create">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
-                <label asp-for="Student.Firstname" class="control-label"></label>
+                <label @*asp-for="Student.Firstname"*@ class="control-label">VoorNaam</label>
                 <input asp-for="Student.Firstname" class="form-control" />
                 <span asp-validation-for="Student.Firstname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.Middelname" class="control-label"></label>
+                <label @*asp-for="Student.Middelname"*@ class="control-label">TussenNaam</label>
                 <input asp-for="Student.Middelname" class="form-control" />
                 <span asp-validation-for="Student.Middelname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.Lastname" class="control-label"></label>
+                <label @*asp-for="Student.Lastname"*@ class="control-label">Achternaam</label>
                 <input asp-for="Student.Lastname" class="form-control" />
                 <span asp-validation-for="Student.Lastname" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Student.Adress" class="control-label"></label>
+                <label @*asp-for="Student.Adress"*@ class="control-label">Adress</label>
                 <input asp-for="Student.Adress" class="form-control" />
                 <span asp-validation-for="Student.Adress" class="text-danger"></span>
             </div>
             <div class="form-group">
-                <label asp-for="Courses" class="control-label"></label>
+                <label @*asp-for="Courses"*@ class="control-label">Opleiding</label>
                 <select asp-for="CourseID" asp-items="Model.Courses.Select(m => new SelectListItem { Text = m.Name, Value = m.Id.ToString() })"></select>
                 <span asp-validation-for="CourseID" class="text-danger"></span>
 
             </div>
             <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
+                <input type="submit" value="Aanmaken" class="btn btn-primary" />
             </div>
         </form>
     </div>
 </div>
 
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Terug Naar Studenten</a>
 </div>
 
 @section Scripts {
