--- a/Studenten_Volg_Systeem/Views/Students/Delete.cshtml
+++ b/Studenten_Volg_Systeem/Views/Students/Delete.cshtml
@@ -4,42 +4,48 @@
     ViewData["Title"] = "Delete";
 }
 
-<h1>Delete</h1>
+<h1>Verwijderen Student</h1>
 
-<h3>Are you sure you want to delete this?</h3>
+<h3>Weet je zeker dat je dit wilt verwijderen?</h3>
 <div>
-    <h4>Student</h4>
+    @*<h4>Student</h4>*@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Firstname)
+            @*@Html.DisplayNameFor(model => model.Firstname)*@Voornaam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Firstname)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Middelname)
+            @*@Html.DisplayNameFor(model => model.Middelname)*@Tussen Naam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Middelname)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Lastname)
+            @*@Html.DisplayNameFor(model => model.Lastname)*@Achternaam
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Lastname)
         </dd>
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Adress)
+            @*@Html.DisplayNameFor(model => model.Adress)*@ Adress
         </dt>
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Adress)
+        </dd>
+        <dt class="col-sm-2">
+            Opleiding
+        </dt>
+        <dd class="col-sm-10">
+            @Html.DisplayFor(model => model.Course.Name)
         </dd>
     </dl>
     
     <form asp-action="Delete">
         <input type="hidden" asp-for="Id" />
-        <input type="submit" value="Delete" class="btn btn-danger" /> |
-        <a asp-action="Index">Back to List</a>
+        <input type="submit" value="Verwijder" class="btn btn-danger" /> |
+        <a asp-action="Index">Terug naar Studenten</a>
     </form>
 </div>
