--- a/Studenten_Volg_Systeem/Views/Students/Index.cshtml
+++ b/Studenten_Volg_Systeem/Views/Students/Index.cshtml
@@ -4,19 +4,21 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Studenten</h1>
 
 <p>
-    <a asp-action="Create">Create New</a>
+    <a asp-action="Create">Maak Nieuwe Student Aan</a>
 </p>
 <table class="table">
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Fullname)
+                @*@Html.DisplayNameFor(model => model.Fullname)*@
+                Naam
             </th>
             <th>
-                @Html.DisplayNameFor(model => model.Course)
+                @*@Html.DisplayNameFor(model => model.Course)*@
+                Opleiding
             </th>
             @*<th>
                 @Html.DisplayNameFor(model => model.Student.Lastname)
@@ -49,9 +51,9 @@
                 @Html.DisplayFor(modelItem => item.Courses.FirstOrDefault(i => i.CourseId == item.Student.Course.CourseId).Name)
             </td>*@
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Edit" asp-route-id="@item.Id">Pas Aan</a> |
                 <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+                <a asp-action="Delete" asp-route-id="@item.Id">Verwijder</a>
             </td>
         </tr>
 }
